<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/margin">

        <EditText
            android:id="@+id/name_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/text_hint_your_name"/>

        <Button
            android:id="@+id/action_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_say_hello"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/margin">

        <EditText
            android:id="@+id/name_bye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/text_hint_your_name"/>

        <Button
            android:id="@+id/action_bye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_say_bye"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ope_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/hint_number"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_add"
                android:gravity="center"/>

            <EditText
                android:id="@+id/ope_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/hint_number"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/action_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate"/>

    </LinearLayout>



</LinearLayout>